# ai-helpdesk-system

./: .gitignore  docker-compose.yml  requirements.txt
Module 2/FPTHelpDesk/backend/: Dockerfile  fpt_helpdesk.db  ingest.py  pyproject.toml  requirements.txt
Module 2/FPTHelpDesk/backend/app/: __init__.py  main.py
Module 2/FPTHelpDesk/backend/app/agents/: base_agent.py  booking_agent.py  faq_agent.py  graph.py  primary_assistant.py  prompts.py
Module 2/FPTHelpDesk/backend/app/agents/booking/: agent.py  prompt.py
Module 2/FPTHelpDesk/backend/app/agents/faq/: agent.py  tools.py
Module 2/FPTHelpDesk/backend/app/agents/it_support/: tools.py
Module 2/FPTHelpDesk/backend/app/api/: deps.py
Module 2/FPTHelpDesk/backend/app/application/: __init__.py
Module 2/FPTHelpDesk/backend/app/core/: config.py  database.py  security.py
Module 2/FPTHelpDesk/backend/app/domain/: __init__.py
Module 2/FPTHelpDesk/backend/app/infrastructure/: __init__.py
Module 2/FPTHelpDesk/backend/app/models/: booking.py  chat.py  ticket.py  user.py
Module 2/FPTHelpDesk/backend/app/presentation/: __init__.py  dependencies.py
Module 2/FPTHelpDesk/backend/app/repositories/: __init__.py  booking_repository.py
Module 2/FPTHelpDesk/backend/app/schemas/: booking.py  user.py
Module 2/FPTHelpDesk/backend/app/services/: auth_service.py  chat_service.py  user_service.py
Module 2/FPTHelpDesk/backend/app/tools/: booking_tools.py  rag_tools.py  search_tools.py  ticket_tools.py
Module 2/FPTHelpDesk/backend/app/utils/: helpers.py
Module 2/FPTHelpDesk/backend/chroma_db/: chroma.sqlite3
(+268 files in other folders)
